# py_REST_demo

./: .gitignore  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  README.md  REQUIREMENTS.md  nginx.conf  pyproject.toml  readme.md  start_prod.sh
app/: auth.py  database.py  endpoints.py  main.py  models.py  task_endpoints.py  user_endpoints.py
certs/: fullchain.pem  privkey.pem
tests/unit/: common.py  test_task.py  test_user.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  CreateAccount.tsx  Login.tsx  Tasks.css  Tasks.tsx  index.css
