[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py_REST_demo"
version = "1.0.0"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "bcrypt==5.0.0",
    "click==8.3.1",
    "ecdsa==0.19.1",
    "fastapi==0.128.0",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "packaging==26.0",
    "pip==26.0",
    "pluggy==1.6.0",
    "pyasn1==0.6.2",
    "pycryptodome==3.23.0",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "pytest==9.0.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "rsa==4.9.1",
    "six==1.17.0",
    "SQLAlchemy==2.0.46",
    "sqlmodel==0.0.31",
    "starlette==0.50.0",
    "typing_extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.40.0",
]
